# etos-suite-starter

./: .coveragerc  .gitignore  CHANGELOG.rst  Dockerfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-push.yml  main.yml  update-etos.yaml
docs/: Makefile  conf.py  index.rst
manifests/base/: deployment.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service-account.yaml  suite-runner-service-account.yaml  suite-runner-template.yaml
manifests/overlays/filebeat/: kustomization.yaml  suite-runner-template.yaml
src/suite_starter/: __init__.py  esr_yaml.py  suite_starter.py
tests/: __init__.py  conftest.py  esr_template.yaml  test_suite_starter.py
