[build-system]
requires = ["setuptools>=72", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "etos_suite_starter"
dynamic = ["version"]
description = "ETOS Suite Starter"
authors = [{name = "Tobias Persson", email = "tobias.persson@axis.com"}]
license = { text  = "Apache License, Version 2.0" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "etos_lib==5.1.2",
    "opentelemetry-api~=1.21",
    "opentelemetry-exporter-otlp~=1.21",
    "opentelemetry-sdk~=1.21",
    "opentelemetry-instrumentation-logging~=0.46b0"
]

[project.urls]
Documentation = "https://etos.readthedocs.io/"
Homepage = "https://github.com/eiffel-community/etos-suite-starter"
Repository = "https://github.com/eiffel-community/etos-suite-starter"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = 1
formats = "bdist_wheel"

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pytest.ini_options]
addopts = "--cov etos_suite_starter --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.setuptools.packages]
find = { where = ["src"], exclude = ["tests"] }