[metadata]
name = suite_starter
description = ETOS Suite Starter
author = Tobias Persson
author-email = tobias.persson@axis.com
license = Apache License, Version 2.0
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/eiffel-community/etos-suite-starter
project-urls =
    Documentation = https://etos.readthedocs.io/
platforms = Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License:: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    pyscaffold==3.2.3
    etos_lib==3.1.0

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.4

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts =
    --cov suite_starter --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = suite_starter
